--- a/style.css
+++ b/style.css
@@ -631,7 +631,9 @@ span {
 .invite {
   font-weight: 500;
   font-size: 1.2rem;
-} /* Footer section */
+}
+
+/* Footer section */
 
 .footer {
   background-color: #2d5ea7;
@@ -681,48 +683,46 @@ span {
   font-weight: 400;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 768px) {
+  .container {
+    max-width: 100%;
+  }
   .about__box {
     display: grid;
     grid-template-columns: 1fr;
   }
   .col-1 {
     padding-bottom: 1rem;
+    padding-inline: 0;
   }
   .col-2 {
     margin-top: 1rem;
   }
-  @media (max-width: 400px) {
-    .container {
-      max-width: 90%;
-    }
-    .col-1 {
-      padding-bottom: 4rem;
-      padding-inline: 0;
-    }
-    .col-2 {
-      padding: 1rem;
-    }
+  .footer__box {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
+    margin-bottom: 2rem;
+    text-align: var(--jc-c);
   }
-  @media (max-width: 768px) {
-    .footer__box {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
-      margin-bottom: 2rem;
-      text-align: var(--jc-c);
-    }
-    .footer__back-to-top {
-      position: absolute;
-      right: 2rem;
-      bottom: 5rem;
-      background-color: var(--blue-300);
-      padding: 0.5rem;
-      border-radius: 5px;
-    }
-    .footer__copyright h2 {
-      color: var(--white);
-      font-size: 1rem;
-      font-weight: 400;
-    }
+  .footer__back-to-top {
+    position: absolute;
+    right: 2rem;
+    bottom: 5rem;
+    background-color: var(--blue-300);
+    padding: 0.5rem;
+    border-radius: 5px;
+  }
+  .footer__copyright h2 {
+    color: var(--white);
+    font-size: 1rem;
+    font-weight: 400;
+  }
+}
+@media (max-width: 400px) {
+  .about__heading {
+    text-transform: uppercase;
+    font-size: 2.2rem;
+    color: #2b2e31;
+    margin-bottom: 2rem;
   }
 }
