--- a/style.css
+++ b/style.css
@@ -711,7 +711,7 @@ span {
   .footer__back-to-top {
     position: absolute;
     right: 2rem;
-    bottom: 5rem;
+    bottom: 6rem;
     background-color: var(--blue-300);
     padding: 0.5rem;
     border-radius: 5px;
@@ -720,6 +720,8 @@ span {
     color: var(--white);
     font-size: 1rem;
     font-weight: 400;
+    margin-inline: 2rem;
+    text-align: center;
   }
 }
 @media (max-width: 400px) {
